components/component-sample/base/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: component-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      component: component-sample
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        component: component-sample
    spec:
      containers:
      - image: maven:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        name: container-image
        ports:
        - containerPort: 8080
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          tcpSocket:
            port: 8080
        resources: {}
status: {}
