components/component-sample/base/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: component-sample
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    component: component-sample
status:
  loadBalancer: {}
