components/component-sample/base/300-route.yaml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    component: component-sample
  name: component-sample
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: component-sample
    weight: 100
status: {}
